# sigscheme

./: .gitignore  .gitmodules  COPYING  Makefile.am  NEWS  NEWS.md  QALog  README  RELNOTE  Rakefile  TODO  autogen.sh  compose.yaml  configure.ac  configure.in  docker-compose.yml  libgcroots.mk.in  make-dist.sh  make-report.sh  runbench.sh  runtest-tail-rec.sh  runtest.sh  setup.sh  sigscheme.mk.in  sigscheme.pc.in
.github/workflows/: linux.yml
ci/: distcheck.sh  release.sh
ci/dockerfiles/: arch-linux.dockerfile  debian-10.dockerfile  debian-12-release.dockerfile  debian-12.dockerfile  debian-13-release.dockerfile  debian-13.dockerfile
doc/: Makefile.am  index.txt  multibyte.txt  release.txt  spec.txt
experimental/imm-const/: imm-test.c
lib/: Makefile.am  sigscheme-init.scm  slib.scm  srfi-0.scm  srfi-1.scm  srfi-43.scm  srfi-55.scm  srfi-69.scm  srfi-9.scm  srfi-95.scm  unittest.scm
m4/: Makefile.am  ax_check_page_aligned_malloc.m4  ax_feature_configurator.m4  ax_func_getcontext.m4
src/: Makefile.am  alloc.c  char.c  config-old.h  continuation.c  deep-cadrs.c  dllentry.c  encoding-config.h  encoding-dummy.h  encoding.c  encoding.h  env.c  error.c  eval.c  format.c  global-aggregated.c  global.h  legacy-macro.c  libtool-version.mk  list.c  load.c  macro.c  main.c  module-siod.c  module-srfi1.c  module-srfi2.c  module-srfi23.c  module-srfi28.c  module-srfi34.c  module-srfi38.c  module-srfi43.c  module-srfi48.c  module-srfi55.c  module-srfi6.c  module-srfi60.c  module-srfi8.c  module-srfi9.c  module-sscm-ext.c  module.c  number-io.c  (+38 more)
src/gcroots/: gcroots.c  gcroots.h
test/: Makefile.am  bigloo-apply.scm  bigloo-bchar.scm  bigloo-bool.scm  bigloo-case.scm  bigloo-letrec.scm  bigloo-list.scm  bigloo-quote.scm  bigloo-vector.scm  gauche-euc-jp.scm  gauche-let-optionals.scm  gauche-primsyn.scm  oleg-srfi2.scm  panu-srfi69.scm  run-singletest.sh.in  scm-r4rstest.scm  stone-srfi1.scm  test-apply.scm  test-assoc.scm  test-begin.scm  test-bool.scm  test-char-cmp.scm  test-char-pred.scm  test-char.scm  test-continuation.scm  test-define-internal.scm  test-define.scm  test-do.scm  test-dyn-extent.scm  test-enc-eucgeneric.scm  test-enc-eucjp.scm  test-enc-sjis.scm  test-enc-utf8.scm  test-eq.scm  test-equal.scm  test-eqv.scm  test-eval.scm  test-fail.scm  test-formal-syntax.scm  test-formatplus.scm  (+53 more)
test-c/: Makefile.am  sscm-test.h  test-alignment.c  test-array2list.c  test-format.c  test-gc-protect-stack.c  test-gc-protect.c  test-gc.c  test-global.c  test-length.c  test-minishell.c  test-storage-compact.c  test-storage.c  test-strcasecmp.c  utils.c
tools/: build_func_table.rb  check_declare_func_typo.rb  check_initialize_scm_null.rb  functable-header.txt  scm_decl.rb  summarize_quality.rb
