EXTRA_DIST = ax_c___attribute__.m4                      \
             ax_c_arithmetic_rshift.m4                  \
             ax_c_referenceable_passed_va_list.m4       \
             ax_feature_configurator.m4                 \
             ax_func_sigsetjmp.m4                       \
             ax_lib_glibc.m4                            \
             check_gnu_make.m4
